--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+    <form>
+        <input type="text" placeholder="Name..." name="nombre" id="nm">
+        <input type="text" placeholder="Message..." name="mensaje" id="msn">
+        <input type="submit" value="Send" id="send">
+    </form>
+
+    <div id="caja"></div>
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./index.js"></script>
